[gd_scene load_steps=4 format=3 uid="uid://ch8gpswjprwpi"]

[ext_resource type="Script" path="res://army/army.gd" id="1_0lpw6"]
[ext_resource type="Theme" path="res://army/army.tres" id="2_vup0t"]
[ext_resource type="Texture2D" uid="uid://cffkuyt3jyx70" path="res://army/flags/flagNIHN.svg" id="4_1rtw2"]

[node name="army" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 0
theme = ExtResource("2_vup0t")
script = ExtResource("1_0lpw6")

[node name="selected_border" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -19.0
offset_top = -6.0
offset_right = 19.0
offset_bottom = 6.0
color = Color(1, 0.717647, 0, 1)

[node name="background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -19.0
offset_top = -5.0
offset_right = -4.0
offset_bottom = 5.0
color = Color(0, 0, 0, 0.498039)

[node name="num_background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -4.0
offset_top = -5.0
offset_right = 19.0
offset_bottom = 5.0
color = Color(0.333, 0.333, 0.333, 1)

[node name="num" type="Label" parent="."]
layout_mode = 0
offset_left = -3.0
offset_top = -5.0
offset_right = 19.0
offset_bottom = 5.0
theme_override_font_sizes/font_size = 7
text = "999"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="select" type="Button" parent="."]
layout_mode = 0
offset_left = -19.0
offset_top = -5.0
offset_right = 19.0
offset_bottom = 5.0
theme = ExtResource("2_vup0t")

[node name="flag" type="Sprite2D" parent="."]
position = Vector2(-11.5, 3.1665e-07)
scale = Vector2(0.0166667, 0.0166667)
texture = ExtResource("4_1rtw2")

[connection signal="pressed" from="select" to="." method="_on_pressed"]
